# uv-project-demo

./: .coverage  QUICK_REFERENCE.md  README.md  UV_PYTHON_BEST_PRACTICES.md  dev.sh  main.py  pyproject.toml
src/uv_project_demo/: __init__.py  agents.py  copilot.py  demo.py  main.py
tests/: __init__.py  test_agents.py  test_copilot.py  test_main.py
